<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATM</string>
    <string name="action_settings">Settings</string>
    
    <string name="load">Hello world!</string>
    
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="bankName">BankName</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="deposite">Deposite</string>
    <string name="personName">Contact Person Name</string>
    <string name="personNumber">Contact Person Mobile Number</string>
    <string name="save">Save Info</string>
    
    <string name="title_activity_create_profile">ATM</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="title_activity_view_profile">ATM</string>
    <string name="title_activity_map">ATM</string>
    
    <string name="add">Add New Profile</string>

</resources>
