<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/viewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/viewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/name"/>
    
    <TextView
        android:id="@+id/viewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/address"/>  
        
    <TextView
        android:id="@+id/viewBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/bankName"/>
    
    <TextView
        android:id="@+id/viewLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/latitude"/>
    
    <TextView
        android:id="@+id/viewLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/longitude"/>
    
    <TextView
        android:id="@+id/viewDeposite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/deposite"/>
    
    <TextView
        android:id="@+id/viewPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/personName"/>
    
    <TextView
        android:id="@+id/viewPersonNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/personNumber"/>

</LinearLayout>
