<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">	
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.ftfl.atm.CreateProfileActivity" >
	
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:visibility="gone"/>
	    
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/name"/>
	    
	    
	    <EditText
	        android:id="@+id/createName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/name"
	        android:inputType="textPersonName" >
	        <requestFocus />
	        
	    </EditText>
	    
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/address"/>  
	        
	    <EditText
	        android:id="@+id/createAddress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/address"
	        android:inputType="textPostalAddress" />
	        
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/bankName"/>
	    
	    <EditText
	        android:id="@+id/createBankName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/bankName"
	        android:inputType="text" />
	    
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/latitude"/>
	    
	    <EditText
	        android:id="@+id/createLatitude"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/latitude"
	        android:inputType="numberDecimal" />
	    
	    <TextView	       
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/longitude"/>
	    
	    <EditText
	        android:id="@+id/createLongitude"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/longitude"
	        android:inputType="numberDecimal" />
	    
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/deposite"/>
	    
	    <EditText
	        android:id="@+id/createDeposite"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/deposite"
	        android:inputType="numberDecimal" />
	    
	    <TextView	       
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/personName"/>
	    
	    <EditText
	        android:id="@+id/createPersonName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/personName"
	        android:inputType="textPersonName" />
	    
	    <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:layout_gravity="start"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/personNumber"/>
	    
	    <EditText
	        android:id="@+id/createPersonNumber"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:ems="10"
	        android:hint="@string/personNumber"
	        android:inputType="phone" />

	    <Button
	        android:id="@+id/btnSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/save" />
	
	</LinearLayout>
</ScrollView>